...
    public var body: some View {
        ZStack {
            switch viewModel.state {
            case .loading:
                ProgressView("Loading...")
                    .scaleEffect(1.7)
                    .accessibilityIdentifier("loading_indicator")
            case .success(let characters):
                List(characters) { character in
                    Button {
                        viewModel.didSelect(character: character)
                    } label: {
                        HStack {
...
                                .foregroundStyle(.gray)
                        }
                    }
                    .accessibilityIdentifier("row_\(character.name)")
                }
                .listStyle(.plain)
                .accessibilityIdentifier("character_list")
            case .failure(let error):
                Text(error).foregroundStyle(.red)
            }
        }
        .task {
            viewModel.fetchCharacters()
...
